# cloud-vs-automotive-demo

./: .dockerignore  .gitignore  CLOUD_LICENSE_PROTOCOL.md  CONTRIBUTING.md  Dockerfile  GRAFANA_CLOUD_QUICKSTART.md  GRAFANA_CLOUD_STATUS.md  IMPLEMENTATION_COMPLETE.md  MULTITENANT_DEMO.md  README.md  REALTIME_DASHBOARD.md  TENANT_AUTHENTICATION.md  UPDATE_FLYIO_DB.md  VENDOR_CUSTOMER_BUDGET_FLOW.md  VENDOR_PORTAL_GUIDE.md  demo-overage-scenario.sh  docker-compose.yml  fly.toml  licenses.db  loki-config.yml  multitenant_demo.db  multitenant_demo.py  prometheus-cloud.yml  prometheus-cloud.yml.template  prometheus.yml  prometheus.yml.template  promtail-config.yml  requirements.txt  reset-flyio-db-manual.sh  reset-flyio-db-simple.sh  reset-flyio-db.sh  start-multitenant-demo.sh  start-prometheus-cloud.sh  tempo-config.yml  test-login.sh  update-and-deploy.sh
.github/: DEPLOYMENT.md
alloy/: DEPLOY.md  Dockerfile  README.md  config.alloy  config.alloy.env  fly.toml
app/: db.py  main.py  security.py
clients/: README.md
clients/cpp/: CMakeLists.txt  Makefile  README.md  example.cpp  license_client.cpp  license_client.hpp
docs/: ADMIN_API_DESIGN.md  ADMIN_API_ENDPOINTS_SUMMARY.md  ADMIN_API_USAGE.md  ALLOY_SETUP.md  ALLOY_VS_DIRECT_PUSH.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEVOPS_DEMO_SCENARIO.md  FLYIO_ACCOUNT_ASSESSMENT.md  GRAFANA_ALERT_SETUP.md  GRAFANA_CLOUD_EXACT_SETUP.md  GRAFANA_CLOUD_LOKI_CREDENTIALS.md  IMPLEMENTATION_COMPLETE.md  README.md  (+17 more)
stress-test/: .gitignore  Cargo.toml  README.md  run_stress_test.sh
stress-test/src/: main.rs
(+43 files in other folders)
