[package]
name = "license-stress-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stress"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

